fix(jsx): More working around jankiness loading `Post`s.
Don't worry too much about having extra DOM elements rendered – they're pretty simple, just heavy with background images. It seems to alleviate a great deal of our scrolling issues to have 8 times the number of posts we could possibly show rendered ready to go.

Also tune the batch sizing window to the number of posts we fetch. It seems reasonable to link the two given that we'd ideally have the number of fetched photos fill the screen. How much that matters given that we're loading so many more photos above and below I don't really know...

And also fix long post/photo titles on small screens.

--- a/packages/css/styles/post.scss
+++ b/packages/css/styles/post.scss
@@ -2,6 +2,7 @@
     margin-top: 0;
     margin-bottom: 0;
     overflow-wrap: break-word;
+    word-break: break-word;
 }
 
 .post-text {
